--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
               <img class="card-img-top" src="competition.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Dog Show</h5>
-                <a class="btn btn-primary" href="">Read</a>
+                <a class="btn btn-primary" href="page3.html">Read</a>
               </div>
             </div>
             <div class="card">
               <img class="card-img-top" src="whelping.jpg" alt=""" height="300vh" width="200vw" class="img-fluid">
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Whelping</h5>
-                <a class="btn btn-primary" href="">Read</a>
+                <a class="btn btn-primary" href="page3.html">Read</a>
               </div>
             </div>
           </div>
