--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav fw-bold">
                         <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="emagazine.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="page2.html">About</a>
