--- a/page4.html
+++ b/page4.html
@@ -36,8 +36,76 @@
             </ul>
           </div>
         </div>
-      </nav>
-    
+    </nav>
+    <div class="container-fluid">
+        <div class="card" style="width: 18rem;">
+            <img src="shampoo.PNG" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card col" style="width: 18rem;">
+            <img src="soap1.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="soap.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="toy.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="harness.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="toy1.jpeg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="dogfood.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="dogfood4.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="dogfood3.jpg" class="card-img-top" alt="..." height="300" width="300>
+            <div class="card-body">
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+            </div>
+        </div>
+
+    </div>  
+</div>
+    <div class="footer fw-bold">
+        <div>The Bully Club Copywright &#169;</div>
+    </div>  
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
