--- a/page2.html
+++ b/page2.html
@@ -39,7 +39,7 @@
                 </div>
         </nav>        
                 <div class="content1 mb-4" >
-                        <img src="standards1.png" width="80%" height="500vh" class="img-fluid" >
+                        <img src="standards1.PNG" width="80%" height="500vh" class="img-fluid" >
                 </div>
 
                 <div class="content2">
