--- a/page3.html
+++ b/page3.html
@@ -227,7 +227,7 @@
             </div>
             
             <div>
-                <img src="ukc.jpg" alt="" height="90" width="90">March 5,2022 - Southeastern North Carolina Agricultural Events Center. 1027 Hwy 74 East Lumberton, NC 28358
+                <img src="UKC.jpg" alt="" height="90" width="90">March 5,2022 - Southeastern North Carolina Agricultural Events Center. 1027 Hwy 74 East Lumberton, NC 28358
             </div>
 
             <div>
