--- a/page5.html
+++ b/page5.html
@@ -37,6 +37,49 @@
           </div>
         </div>
       </nav>
+    <center>
+      <div id="carouselpictures" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="bully1.jpg" class="d-block" alt="..." height="300vh" width="400vw">
+          </div>
+
+          <div class="carousel-item">
+            <img src="bully2.png" class="d-block" alt="..." height="300vh" width="400vw">
+          </div>
+
+          <div class="carousel-item">
+            <img src="bully4.jpg" class="d-block" alt="..." height="300vh" width="400vw">
+          </div>  
+
+            <div class="carousel-item active">
+              <img src="bully6.jpg" class="d-block" alt="..." height="300vh" width="400vw">
+            </div>
+
+            <div class="carousel-item">
+              <img src="bully7.jpg" class="d-block" alt="..." height="300vh" width="400vw">
+            </div>
+
+            <div class="carousel-item">
+              <img src="bully8.jpg" class="d-block" alt="..." height="300vh" width="400vw">
+          </div>
+
+          <div class="carousel-item">
+            <img src="bully9.jpg" class="d-block" alt="..." height="300vh" width="400vw">
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+       
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselpictures" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </center>
     
     <div class="footer fw-bold">
         <div>The Bully Club Copywright &#169;</div>
