--- a/page5.html
+++ b/page5.html
@@ -77,12 +77,63 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </div> <br>
     </center>
+        
+    <form class="row g-3">
+      <h1>Contact Us</h1>
+
+      <div class="col-md-6">
+        <label for="first-name" class="form-label">First Name</label>
+        <input type="name" class="form-control" id="first-name">
+      </div>
+
+      <div class="col-md-6">
+        <label for="last-name" class="form-label">Last Name</label>
+        <input type="name" class="form-control" id="last-name">
+      </div>
+
+      <div class="col-md-6">
+        <label for="email" class="form-label">E-mail</label>
+        <input type="email" class="form-control" id="email">
+      </div>
+      <div class="col-md-6">
+        <label for="contactnumber" class="form-label">Contact number</label>
+        <input type="text" class="form-control" id="contactnumber">
+      </div>
+
+      <div class="col-12">
+        <label for="Address" class="form-label">Address</label>
+        <input type="text" class="form-control" id="Address">
+      </div>
+
+      <div class="col-md-4">
+        <label for="City" class="form-label">City</label>
+        <input type="text" class="form-control" id="City">
+      </div>
+
+      <div class="col-md-4">
+        <label for="State" class="form-label">State</label>
+        <input type="text" id="State" class="form-control">
+      </div>
+
+      <div class="col-md-4">
+        <label for="Zipcode" class="form-label">Zip</label>
+        <input type="text" class="form-control" id="Zipcode">
+      </div>
+
+      <textarea rows="10" cols="30" placeholder="Type your message here" class="message-box"></textarea>
+
+      </div>
+      <div class="col-12" style="text-align: center;">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </form>
     
-    <div class="footer fw-bold">
+    <div class="footer fw-bold mt-4">
         <div>The Bully Club Copywright &#169;</div>
     </div>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
