--- a/page5.html
+++ b/page5.html
@@ -7,10 +7,10 @@
     <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="page5.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg mb-4">
         <div class="container-fluid">
           <a class="navbar-brand fw-bolder" href="#">The Bully Club</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +68,7 @@
               <img src="bully1.jpg" class="d-block" alt="..." height="400vh" width="500vw">
             </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselpictures" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
@@ -79,7 +79,7 @@
         </button>
       </div> <br>
     </center>
-        
+    <div class="container">  
     <form class="row g-3">
       <h1>Contact Us</h1>
 
@@ -129,7 +129,8 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
-    
+  </div> 
+
     <div class="footer fw-bold mt-4">
         <div>The Bully Club Copywright &#169;</div>
     </div>
