--- a/page5.html
+++ b/page5.html
@@ -122,10 +122,10 @@
         <input type="text" class="form-control" id="Zipcode">
       </div>
 
-      <textarea rows="10" cols="30" placeholder="Type your message here" class="message-box"></textarea>
+      <textarea rows="5" cols="20" placeholder="Type your message here" class="message-box"></textarea>
 
       </div>
-      <div class="col-12" style="text-align: center;">
+      <div class="col-12 mt-4" style="text-align: center;">
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
