--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             </div>
           </div>
 
+        <div>
           <h5 style="text-align: center; background-color:#A7BC5B ;" class="mb-4 fw-bolder">Dog Goodies</h5>
             <div class="content2 mb-4" style="background-color: #A7BC5B; text-align: center;">
                 <a href="page4.html"><img src="dogfood3.jpg" height="450vh" width="400vw" class="rounded img-fluid"></a>
@@ -77,6 +78,8 @@
                 <a href="page4.html"><img src="dogfood1.jpg" height="350vh" width="350vw" class="rounded img-fluid"></a>
                 <a href="page4.html"><img src="dogfood.jpg" height="350vh" width="350vw" class="rounded img-fluid"></a>
             </div> 
+        </div>  
+          <br>
         </div>   
         <div class="footer fw-bold">
             <div>The Bully Club Copywright &#169;</div>
