--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
         <div class="container-fluid">
         <h5 style="text-align: center; background-color: #A7BC5B;" class="mb-4 fw-bolder">Knowing the Bully</h5>
 
-        <div class="card-group border-dark mb-4">
+        <div class="card-group border-dark mb-4 grid-pics">
             <div class="card">
-              <img class="card-img-top" src="bully3.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
+              <img class="card-img-top" src="bully3.jpg" alt="" height="" width="100%" class="">
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Getting Bullied</h5>
                 <a class="btn btn-primary" href="page2.html">Read</a>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="competition.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
+              <img class="card-img-top" src="competition.jpg" alt="" height="" width="100%" class="">
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Dog Show</h5>
                 <a class="btn btn-primary" href="page3.html">Read</a>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="whelping.jpg" alt=""" height="300vh" width="200vw" class="img-fluid">
+              <img class="card-img-top" src="whelping.jpg" alt=""" height="" width="100%" class="">
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Whelping</h5>
                 <a class="btn btn-primary" href="page3.html">Read</a>
