--- a/page2.html
+++ b/page2.html
@@ -24,10 +24,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="page2.html">About</a>
+                        <a class="nav-link" href="page2.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="page3.html">Must Read</a>
+                        <a class="nav-link" href="page3.html">Info</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="page4.html">Shop</a>
