--- a/index.html
+++ b/index.html
@@ -47,21 +47,27 @@
 
         <div class="card-group border-dark mb-4 grid-pics">
             <div class="card">
-              <img class="card-img-top" src="bully3.jpg" alt="" height="" width="100%" class="">
+             <div class="img-container">
+              <img class="card-img-top" src="bully3.jpg" alt=""  width="100%" class="">
+            </div>
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Getting Bullied</h5>
                 <a class="btn btn-primary" href="page2.html">Read</a>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="competition.jpg" alt="" height="" width="100%" class="">
+            <div class="img-container">
+              <img class="card-img-top" src="competition.jpg" alt=""  width="100%" class="">
+            </div>
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Dog Show</h5>
                 <a class="btn btn-primary" href="page3.html">Read</a>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="whelping.jpg" alt=""" height="" width="100%" class="">
+              <div class="img-container">
+              <img class="card-img-top" src="whelping.jpg" alt="""  width="100%" class="">
+              </div>
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Whelping</h5>
                 <a class="btn btn-primary" href="page3.html">Read</a>
