--- a/page4.html
+++ b/page4.html
@@ -64,9 +64,11 @@
           </div>
     </div>
 
-    <div class="card-group border-dark m-4">
+    <div class="card-group border-dark">
       <div class="card p-3">
-        <img class="card-img-top" src="toy.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
+        <div class="img-container">
+        <img class="card-img-top" src="toy.jpg" alt="" height="" width="" class="">
+      </div>
         <div class="card-body">
           <h5 class="card-title">&#8369 299.00</h5>
           <a class="btn btn-primary" href="#">Add to Cart</a>
@@ -74,7 +76,11 @@
       </div>
       
       <div class="card p-3">
-        <img class="card-img-top" src="harness.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
+        <div class="card p-3">
+          <div class="img-container">
+        <img class="card-img-top" src="harness.PNG" alt="" height="" width="" class="">
+      </div>
+      </div>
         <div class="card-body">
           <h5 class="card-title">&#8369 299.00</h5>
           <a class="btn btn-primary" href="#">Add to Cart</a>
@@ -82,7 +88,11 @@
       </div>
       
       <div class="card p-3">
-        <img class="card-img-top" src="toy1.jpeg" alt=""" height="300vh" width="200vw" class="img-fluid">
+        <div class="card p-3">
+          <div class="img-container">
+        <img class="card-img-top" src="toy1.PNG" alt=""" height="" width="" class="">
+        </div>
+      </div>
         <div class="card-body">
           <h5 class="card-title">&#8369 299.00</h5>
           <a class="btn btn-primary" href="#">Add to Cart</a>
@@ -92,7 +102,9 @@
 
   <div class="card-group border-dark m-4">
       <div class="card p-3">
+        <div class="img-container">
         <img class="card-img-top" src="dogfood1.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
+        </div>
         <div class="card-body">
         <h5 class="card-title">&#8369 299.00</h5>
         <a class="btn btn-primary" href="#">Add to Cart</a>
@@ -100,7 +112,9 @@
   </div>
   
       <div class="card p-3">
+        <div class="img-container">
         <img class="card-img-top" src="dogfood2.jpg" alt="" height="300vh" width="200vw" class="img-fluid">
+       </div>
         <div class="card-body">
         <h5 class="card-title">&#8369 299.00</h5>
         <a class="btn btn-primary" href="#">Add to Cart</a>
@@ -108,7 +122,9 @@
       </div>
   
       <div class="card p-3">
+        <div class="img-container">
         <img class="card-img-top" src="dogfood4.jpg" alt=""" height="300vh" width="200vw" class="img-fluid">
+        </div>
         <div class="card-body">
         <h5 class="card-title">&#8369 299.00</h5>
         <a class="btn btn-primary" href="#">Add to Cart</a>
