--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="card-group border-dark mb-4 grid-pics">
             <div class="card">
              <div class="img-container">
-              <img class="card-img-top" src="bully3.jpg" alt=""  width="100%" class="">
+              <img class="card-img-top" src="bully3.jpg" alt=""  width="" class="">
             </div>
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Getting Bullied</h5>
@@ -57,7 +57,7 @@
             </div>
             <div class="card">
             <div class="img-container">
-              <img class="card-img-top" src="competition.jpg" alt=""  width="100%" class="">
+              <img class="card-img-top" src="competition.jpg" alt=""  width="" class="">
             </div>
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Dog Show</h5>
@@ -66,7 +66,7 @@
             </div>
             <div class="card">
               <div class="img-container">
-              <img class="card-img-top" src="whelping.jpg" alt="""  width="100%" class="">
+              <img class="card-img-top" src="whelping.jpg" alt="""  width="" class="">
               </div>
               <div class="card-body">
                 <h5 class="card-title fw-bolder">Whelping</h5>
@@ -78,8 +78,8 @@
         <div>
           <h5 style="text-align: center; background-color:#A7BC5B ;" class="mb-4 fw-bolder">Dog Goodies</h5>
             <div class="content2 mb-4" style="background-color: #A7BC5B; text-align: center;">
-                <a href="page4.html"><img src="dogfood3.jpg" height="450vh" width="400vw" class="rounded"></a>
-                <a href="page4.html"><img src="dogfood2.jpg" height="450vh" width="400vw" class="rounded"></a>
+                <a href="page4.html"><img src="dogfood3.jpg" height="350vh" width="350vw" class="rounded"></a>
+                <a href="page4.html"><img src="dogfood2.jpg" height="350vh" width="350vw" class="rounded"></a>
                 <a href="page4.html"><img src="dogfood4.jpg" height="350vh" width="350vw" class="rounded"></a>
                 <a href="page4.html"><img src="dogfood1.jpg" height="350vh" width="350vw" class="rounded"></a>
                 <a href="page4.html"><img src="dogfood.jpg" height="350vh" width="350vw" class="rounded"></a>
