--- a/page3.html
+++ b/page3.html
@@ -40,7 +40,7 @@
 </head>
     <div>
         <div class="card m-5" style="width: 18rem; background-color: #A7BC5B;">
-            <img class="card-img-top" src="harness.PNG" alt="" height="400vw"><br>
+            <img class="card-img-top" src="harness.jpg" alt="" height="400vw"><br>
             <img class="card-img-top" src="accessory1.PNG" alt="" height="400vw">
         </div>
 
