--- a/page5.html
+++ b/page5.html
@@ -129,7 +129,12 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
-  </div> 
+  </div> <br>
+  
+    <div style="border: 1px solid black; text-align: center;">
+      <p>Phone# +639999999999</p>
+      <p>Address:Taguig City</p>
+    </div>
 
     <div class="footer fw-bold mt-4">
         <div>The Bully Club Copywright &#169;</div>
